--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <body>
     <header class="center px3 py4 white bg-gray bg-cover bg-center"
             style="background-image: url(http://placehold.it/500x500)">
+            NO THIS IS ALL WRONG
       <h1 class="h1 h0-responsive caps mt4 mb0 regular">TeamECO</h1>
       <p class="h3">Our mission is...</p>
       <a href="#" class="h3 button button-big mb4">Pancake</a>
     </header>
   </body>
-
