--- a/index.html
+++ b/index.html
@@ -1,17 +1,30 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>
-      TeamECO homepage
-    </title>
-    <link href="//d2v52k3cl9vedd.cloudfront.net/basscss/6.0.2/basscss.min.css" rel="stylesheet">
-  </head>
-  <body>
-    <header class="center px3 py4 white bg-gray bg-cover bg-center"
-            style="background-image: url(http://placehold.it/500x500)">
-            NO THIS IS ALL WRONG
-      <h1 class="h1 h0-responsive caps mt4 mb0 regular">TeamECO</h1>
-      <p class="h3">Our mission is...</p>
-      <a href="#" class="h3 button button-big mb4">Pancake</a>
-    </header>
-  </body>
+<head>
+  <title>
+    Homepage
+  </title>
+  <link rel="stylesheet" href="https://cdn.smtcs.rocks/md/md.css">
+</head>
+<body>
+  <ul id="dropdown1" class="dropdown-content">
+  <li><a href="#!">one</a></li>
+  <li><a href="#!">two</a></li>
+  <li class="divider"></li>
+  <li><a href="#!">three</a></li>
+</ul>
+<nav>
+  <div class="nav-wrapper">
+    <a href="#!" class="brand-logo"><img src="https://placehold.it/65x65"></img></a>
+    <ul class="right hide-on-med-and-down">
+      <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Dropdown<i class="mdi-navigation-arrow-drop-down right"></i></a></li>
+      <li><a href="sass.html">Calendar</a></li>
+      <li><a href="components.html">Contact us</a></li>
+      <!-- Dropdown Trigger -->
+    </ul>
+  </div>
+</nav>
+<h3>Team-ECO(Everest Cleans Outdoors)</h3>
+<img src="photo_2_copy_720.png"></img>
+  <script src="https://cdn.smtcs.rocks/md/md.js"></script>
+</body>
