--- a/index.html
+++ b/index.html
@@ -1,30 +1,34 @@
+
 <!DOCTYPE html>
 <html>
-<head>
-  <title>
-    Homepage
-  </title>
-  <link rel="stylesheet" href="https://cdn.smtcs.rocks/md/md.css">
-</head>
-<body>
-  <ul id="dropdown1" class="dropdown-content">
-  <li><a href="#!">one</a></li>
-  <li><a href="#!">two</a></li>
-  <li class="divider"></li>
-  <li><a href="#!">three</a></li>
-</ul>
-<nav>
-  <div class="nav-wrapper">
-    <a href="#!" class="brand-logo"><img src="https://placehold.it/65x65"></img></a>
-    <ul class="right hide-on-med-and-down">
-      <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Dropdown<i class="mdi-navigation-arrow-drop-down right"></i></a></li>
-      <li><a href="sass.html">Calendar</a></li>
-      <li><a href="components.html">Contact us</a></li>
-      <!-- Dropdown Trigger -->
+  <head>
+    <title>
+      Homepage
+    </title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.96.1/css/materialize.css">
+  </head>
+  <body>
+    <!-- Dropdown Structure -->
+    <ul id="dropdown1" class="dropdown-content">
+      <li><a href="#!">one</a></li>
+      <li><a href="#!">two</a></li>
+      <li class="divider"></li>
+      <li><a href="#!">three</a></li>
     </ul>
-  </div>
-</nav>
-<h3>Team-ECO(Everest Cleans Outdoors)</h3>
-<img src="photo_2_copy_720.png"></img>
-  <script src="https://cdn.smtcs.rocks/md/md.js"></script>
-</body>
+    <nav class="green darken-4">
+      <div class="nav-wrapper">
+        <a href="#!" class="brand-logo"><img src="https://placehold.it/65x65"></img></a>
+        <ul class="right hide-on-med-and-down">
+          <li><a href="sass.html">Contact us</a></li>
+          <li><a href="components.html">Calendar</a></li>
+          <!-- Dropdown Trigger -->
+          <li><a class="dropdown-button" href="#!" data-activates="dropdown1">About<i class="mdi-navigation-arrow-drop-down right"></i></a></li>
+        </ul>
+      </div>
+    </nav>
+
+    <h3>Team-ECO(Everest Cleans Outdoors)</h3>
+    <img src="photo_2_copy_720.png"></img>
+    <script src="http://code.jquery.com/jquery-2.1.4.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.96.1/js/materialize.js"></script>
+  </body>
