Added placeholder text and card with first image for testing

--- a/index.html
+++ b/index.html
@@ -27,8 +27,24 @@
         </ul>
       </div>
     </nav>
-    <h3>Team-ECO(Everest Cleans Outdoors)</h3>
-    <img class="image1" src="photo_2_copy_720.png"></img>
+    <div class="container">
+      <h3 class="z-depth-0">This text will be styled and replaced</h3>
+    </div>
+    <div class="row">
+      <p class="col s6">Bacon ipsum dolor amet pork loin pancetta kevin, beef ribs short loin prosciutto tongue spare ribs pork belly. Spare ribs sausage picanha chuck, brisket sirloin meatloaf ham boudin frankfurter porchetta. Spare ribs bresaola bacon brisket chuck pork pastrami sausage hamburger. Tongue swine sirloin pork chop turkey jowl boudin alcatra short ribs shoulder. Jerky tongue t-bone biltong alcatra ham ham hock swine venison salami fatback. Salami corned beef hamburger pastrami leberkas strip steak swine pork beef kielbasa tongue ribeye doner landjaeger pancetta.</p>
+      <div class="card">
+        <div class="card-image waves-effect waves-block waves-light">
+          <img class="image1 activator" src="photo_2_copy_720.png">
+        </div>
+        <div class="card-content">
+          <span class="card-title activator grey-text text-darken-4">Team-ECO beach cleanup <i class="mdi-navigation-more-vert right"></i></span>
+        </div>
+        <div class="card-reveal">
+          <span class="card-title grey-text text-darken-4">Team-ECO beach cleanup <i class="mdi-navigation-close right"></i></span>
+          <p>Desciption of Event and more placeholder text YEAH!</p>
+        </div>
+      </div>
+    </div>
     <script src="http://code.jquery.com/jquery-2.1.4.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.96.1/js/materialize.js"></script>
   </body>
