--- a/index.html
+++ b/index.html
@@ -32,19 +32,33 @@
     </div>
     <div class="row">
       <p class="col s6">Bacon ipsum dolor amet pork loin pancetta kevin, beef ribs short loin prosciutto tongue spare ribs pork belly. Spare ribs sausage picanha chuck, brisket sirloin meatloaf ham boudin frankfurter porchetta. Spare ribs bresaola bacon brisket chuck pork pastrami sausage hamburger. Tongue swine sirloin pork chop turkey jowl boudin alcatra short ribs shoulder. Jerky tongue t-bone biltong alcatra ham ham hock swine venison salami fatback. Salami corned beef hamburger pastrami leberkas strip steak swine pork beef kielbasa tongue ribeye doner landjaeger pancetta.</p>
-      <div class="card">
-        <div class="card-image waves-effect waves-block waves-light">
-          <img class="image1 activator" src="photo_2_copy_720.png">
-        </div>
-        <div class="card-content">
-          <span class="card-title activator grey-text text-darken-4">Team-ECO beach cleanup <i class="mdi-navigation-more-vert right"></i></span>
-        </div>
-        <div class="card-reveal">
-          <span class="card-title grey-text text-darken-4">Team-ECO beach cleanup <i class="mdi-navigation-close right"></i></span>
-          <p>Desciption of Event and more placeholder text YEAH!</p>
+      <div class="row">
+        <div class="card">
+          <div class="card-image">
+            <img class="image1 activator" src="photo_2_copy_720.png">
+          </div>
+          <div class="card-content">
+            <span class="card-title activator grey-text text-darken-4">Team-ECO beach cleanup <i class="mdi-navigation-more-vert right"></i></span>
+          </div>
+          <div class="card-reveal">
+            <span class="card-title grey-text text-darken-4">Team-ECO beach cleanup <i class="mdi-navigation-close right"></i></span>
+            <p>Desciption of Event and more placeholder text YEAH!</p>
+          </div>
         </div>
       </div>
-    </div>
-    <script src="http://code.jquery.com/jquery-2.1.4.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.96.1/js/materialize.js"></script>
+      <div class="donate row">
+        <div class="col s12 m6">                                                                                                                                
+          <div class="z-depth-2 card white">
+            <div class="card-content">
+              <span class="card-title black-text">Donate</span>
+              <p>Donate via the paypal service or something else!</p>
+            </div>
+            <div class="card-action">
+              <a class="white-text light-blue waves-effect waves-light btn">Donate</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <script src="http://code.jquery.com/jquery-2.1.4.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.96.1/js/materialize.js"></script>
   </body>
