Added a lot of new pages

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
   <head>
@@ -7,28 +6,28 @@
     </title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.96.1/css/materialize.css">
     <link rel="stylesheet" href="css/style.css">
+    <link href='http://fonts.googleapis.com/css?family=Source+Code+Pro' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <!-- Dropdown Structure -->
     <ul id="dropdown1" class="dropdown-content">
-      <li><a href="#!">one</a></li>
-      <li><a href="#!">two</a></li>
+      <li><a href="about.html/bio">Biography?</a></li>
+      <li><a href="about.html/desc">Desciption?</a></li>
       <li class="divider"></li>
-      <li><a href="#!">three</a></li>
+      <li><a href="about.html/other">Other?</a></li>
     </ul>
     <nav class="green darken-4">
       <div class="nav-wrapper">
-        <a href="#!" class="brand-logo"><img src="https://placehold.it/65x65"></img></a>
+        <a href="index.html" class="brand-logo"><img src="https://placehold.it/65x65"></img></a>
         <ul class="right hide-on-med-and-down">
-          <li><a href="sass.html">Contact us</a></li>
-          <li><a href="components.html">Calendar</a></li>
+          <li><a href="contact.html">Contact us</a></li>
+          <li><a href="calendar.html">Calendar</a></li>
           <!-- Dropdown Trigger -->
           <li><a class="dropdown-button" href="#!" data-activates="dropdown1">About<i class="mdi-navigation-arrow-drop-down right"></i></a></li>
         </ul>
       </div>
     </nav>
-    <div class="container">
-      <h3 class="z-depth-0">This text will be styled and replaced</h3>
+    <h3 class="z-depth-0">This text will be styled and replaced</h3>
     </div>
     <div class="row">
       <p class="col s6">Bacon ipsum dolor amet pork loin pancetta kevin, beef ribs short loin prosciutto tongue spare ribs pork belly. Spare ribs sausage picanha chuck, brisket sirloin meatloaf ham boudin frankfurter porchetta. Spare ribs bresaola bacon brisket chuck pork pastrami sausage hamburger. Tongue swine sirloin pork chop turkey jowl boudin alcatra short ribs shoulder. Jerky tongue t-bone biltong alcatra ham ham hock swine venison salami fatback. Salami corned beef hamburger pastrami leberkas strip steak swine pork beef kielbasa tongue ribeye doner landjaeger pancetta.</p>
@@ -47,7 +46,7 @@
         </div>
       </div>
       <div class="donate row">
-        <div class="col s12 m6">                                                                                                                                
+        <div class="col s6">                                                                                                                                
           <div class="z-depth-2 card white">
             <div class="card-content">
               <span class="card-title black-text">Donate</span>
