--- a/contact.html
+++ b/contact.html
@@ -1,32 +1,49 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.96.1/css/materialize.css">                                                  
-    <link rel="stylesheet" href="css/style.css"> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.96.1/css/materialize.css">
+    <link rel="stylesheet" href="css/style.css">
     <link href='http://fonts.googleapis.com/css?family=Source+Code+Pro' rel='stylesheet' type='text/css'>
     <title>
       Contact us
     </title>
   </head>
   <body>
-    <!-- Dropdown Structure -->                                                                                                                                   
-    <ul id="dropdown1" class="dropdown-content">                                                                                                                  
-      <li><a href="#!">Biography?</a></li>                                                                                                                        
-      <li><a href="#!">Desciption?</a></li>                                                                                                                       
-      <li class="divider"></li>                                                                                                                                   
-      <li><a href="#!">Other?</a></li>                                                                                                                            
-    </ul>                                                                                                                                                         
-    <nav class="green darken-4">                                                                                                                                  
-      <div class="nav-wrapper">                                                                                                                                   
-        <a href="index.html" class="brand-logo"><img src="https://placehold.it/65x65"></img></a>                                                                  
-        <ul class="right hide-on-med-and-down">                                                                                                                   
-          <li><a href="index.html">Homepage</a></li>                                                                                                             
-          <li><a href="calendar.html">Calendar</a></li>                                                                                                           
-          <!-- Dropdown Trigger -->                                                                                                                               
-          <li><a class="dropdown-button" href="#!" data-activates="dropdown1">About<i class="mdi-navigation-arrow-drop-down right"></i></a></li>                  
-        </ul>                                                                                                                                                     
-      </div>                                                                                                                                                      
-    </nav>                     
-    <script src="http://code.jquery.com/jquery-2.1.4.js"></script>                                                                                              
+    <!-- Dropdown Structure -->
+    <ul id="dropdown1" class="dropdown-content">
+      <li><a href="#!">Biography?</a></li>
+      <li><a href="#!">Desciption?</a></li>
+      <li class="divider"></li>
+      <li><a href="#!">Other?</a></li>
+    </ul>
+    <nav class="green darken-4">
+      <div class="nav-wrapper">
+        <a href="index.html" class="brand-logo"><img src="https://placehold.it/65x65"></img></a>
+        <ul class="right hide-on-med-and-down">
+          <li><a href="index.html">Homepage</a></li>
+          <li><a href="calendar.html">Calendar</a></li>
+          <!-- Dropdown Trigger -->
+          <li><a class="dropdown-button" href="#!" data-activates="dropdown1">About<i class="mdi-navigation-arrow-drop-down right"></i></a></li>
+        </ul>
+      </div>
+    </nav>
+    <div class="container">
+      <ul>
+        <li><h5>Teacher Representative:</h5> slangely@summitps.org</li>
+        <li><h5>Club members:</h5></li>
+        <li>Juan Barragan jbarragan.ep@mysummitps.org</li>
+        <li>Daniela Talavera Rangel dtalaverarangel.ep@mysummitps.org</li>
+        <li>Emily Hallamasek ehallamasek.ep@mysummitps.org</li>
+        <li>Holly Buehlmann hbuehlmann.ep@mysummitps.org</li>
+        <li>Jade Smith jsmith.ep@mysummitps.org</li>
+        <!-- RIP Livienna Lie <llie.ep@mysummitps.org>,-->
+        <li>Lourdes Perez-Monroy lperez-monroy.ep@mysummitps.org</li>
+        <li>Martin Larios mlarios.ep@mysummitps.org</li>
+        <li>Shivani Patel spatel.ep@mysummitps.org</li>
+        <li>Sienna Smith ssmith.ep@mysummitps.org</li>
+        <li>Sophie Sweeney ssweeny.ep@mysummitps.org</li>
+      </li>
+    </ul>
+    <script src="http://code.jquery.com/jquery-2.1.4.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.96.1/js/materialize.js"></script>
   </body>
