--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.96.1/css/materialize.css">
     <link rel="stylesheet" href="css/style.css">
-    <link href='https://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Slabo+27px|Source+Sans+Pro' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <!-- Dropdown Structure -->
@@ -58,7 +58,7 @@
           </div>
         </div>
       </div>
-      <footer class="page-footer">
+      <footer class="green darken-4 page-footer">
           <div class="container">
             <div class="row">
               <div class="col l6 s12">
