--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
               <div class="col l4 offset-l2 s12">
                 <h5 class="white-text">Links</h5>
                 <ul>
-                  <li><a class="grey-text text-lighten-3" href="#!">GitHub</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!"><span class="octicon octicon-mark-github"></span>
+GitHub</a></li>
                 </ul>
               </div>
             </div>
