--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@
               <div class="col l4 offset-l2 s12">
                 <h5 class="white-text">Links</h5>
                 <ul>
-                  <li><a class="grey-text text-lighten-3" href="#!"><span class="octicon octicon-mark-github"></span>
-GitHub</a></li>
+                  <li><a class="grey-text text-lighten-3" href="https://github.com/Team-ECO/Homepage"><span class="octicon octicon-mark-github"></span>GitHub</a></li>
                 </ul>
               </div>
             </div>
@@ -77,10 +76,10 @@ GitHub</a></li>
           <div class="footer-copyright">
             <div class="container">
             © 2015 MIT License
-            <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
             </div>
           </div>
         </footer>
       <script src="http://code.jquery.com/jquery-2.1.4.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.96.1/js/materialize.js"></script>
   </body>
+</html>
