--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
   <body>
     <!-- Dropdown Structure -->
     <ul id="dropdown1" class="dropdown-content">
-      <li><a href="about.html/bio">Biography?</a></li>
       <li><a href="about.html/desc">Desciption?</a></li>
       <li class="divider"></li>
       <li><a href="about.html/other">Other?</a></li>
@@ -79,6 +78,7 @@
             </div>
           </div>
         </footer>
+        </div>
       <script src="http://code.jquery.com/jquery-2.1.4.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.96.1/js/materialize.js"></script>
   </body>
