Changed text to flow text and removed a page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.96.1/css/materialize.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="octicons/octicons.css">
     <link href='https://fonts.googleapis.com/css?family=Slabo+27px|Source+Sans+Pro' rel='stylesheet' type='text/css'>
   </head>
   <body>
@@ -19,7 +20,6 @@
       <div class="nav-wrapper">
         <a href="index.html" class="brand-logo"><img src="https://placehold.it/65x65"></img></a>
         <ul class="right hide-on-med-and-down">
-          <li><a href="contact.html">Contact us</a></li>
           <li><a href="calendar.html">Calendar</a></li>
           <!-- Dropdown Trigger -->
           <li><a class="dropdown-button" href="#!" data-activates="dropdown1">About<i class="mdi-navigation-arrow-drop-down right"></i></a></li>
@@ -29,23 +29,18 @@
     <h3 class="z-depth-0">This text will be styled and replaced</h3>
     </div>
     <div class="row">
-      <p class="col s6">Bacon ipsum dolor amet pork loin pancetta kevin, beef ribs short loin prosciutto tongue spare ribs pork belly. Spare ribs sausage picanha chuck, brisket sirloin meatloaf ham boudin frankfurter porchetta. Spare ribs bresaola bacon brisket chuck pork pastrami sausage hamburger. Tongue swine sirloin pork chop turkey jowl boudin alcatra short ribs shoulder. Jerky tongue t-bone biltong alcatra ham ham hock swine venison salami fatback. Salami corned beef hamburger pastrami leberkas strip steak swine pork beef kielbasa tongue ribeye doner landjaeger pancetta.</p>
+      <p class="flow-text col s6">Bacon ipsum dolor amet pork loin pancetta kevin, beef ribs short loin prosciutto tongue spare ribs pork belly. Spare ribs sausage picanha chuck, brisket sirloin meatloaf ham boudin frankfurter porchetta. Spare ribs bresaola bacon brisket chuck pork pastrami sausage hamburger. Tongue swine sirloin pork chop turkey jowl boudin alcatra short ribs shoulder. Jerky tongue t-bone biltong alcatra ham ham hock swine venison salami fatback. Salami corned beef hamburger pastrami leberkas strip steak swine pork beef kielbasa tongue ribeye doner landjaeger pancetta.</p>
       <div class="row">
         <div class="card">
           <div class="card-image">
-            <img class="image1 activator" src="photo_2_copy_720.png">
+            <!--<img class="image1 activator" src="photo_2_copy_720.png">-->
+            <img class="materialboxed" width="650" src="photo_2_copy_720.png">
           </div>
-          <div class="card-content">
-            <span class="card-title activator grey-text text-darken-4">Team-ECO beach cleanup <i class="mdi-navigation-more-vert right"></i></span>
-          </div>
-          <div class="card-reveal">
-            <span class="card-title grey-text text-darken-4">Team-ECO beach cleanup <i class="mdi-navigation-close right"></i></span>
-            <p>Desciption of Event and more placeholder text YEAH!</p>
           </div>
         </div>
       </div>
       <div class="donate row">
-        <div class="col s4">                                                                                                                                
+        <div class="col s4">
           <div class="z-depth-2 card white">
             <div class="card-content">
               <span class="card-title black-text">Donate</span>
@@ -62,19 +57,21 @@
             <div class="row">
               <div class="col l6 s12">
                 <h5 class="white-text">Footer Content</h5>
-                <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+                <p class="grey-text text-lighten-4">Contact us at:</p>
+                <div class="white-text">slangely@summitps.org</div>
+                <div class="white-text">Whatever our team-eco email is</div>
               </div>
               <div class="col l4 offset-l2 s12">
-                <h5 class="white-text">Links</h5>
+                <h5 class="white-text">Our repo</h5>
                 <ul>
-                  <li><a class="grey-text text-lighten-3" href="https://github.com/Team-ECO/Homepage"><span class="octicon octicon-mark-github"></span>GitHub</a></li>
+                  <li><a class="grey-text text-lighten-3" href="https://github.com/Team-ECO/Homepage"><span class="octicon octicon-mark-github"></span></a></li>
                 </ul>
               </div>
             </div>
           </div>
           <div class="footer-copyright">
             <div class="container">
-            © 2015 MIT License
+              &copy 2015 MIT License
             </div>
           </div>
         </footer>
