--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <h5 class="white-text">Footer Content</h5>
                 <p class="grey-text text-lighten-4">Contact us at:</p>
                 <div class="white-text">slangely@summitps.org</div>
-                <div class="white-text">Whatever our team-eco email is</div>
+                <div class="white-text">teameco.eph@gmail.com</div>
               </div>
               <div class="col l4 offset-l2 s12">
                 <h5 class="white-text">Our repo</h5>
