Added mission statement

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <h3 class="z-depth-0">This text will be styled and replaced</h3>
     </div>
     <div class="row">
-      <p class="flow-text col s6">Bacon ipsum dolor amet pork loin pancetta kevin, beef ribs short loin prosciutto tongue spare ribs pork belly. Spare ribs sausage picanha chuck, brisket sirloin meatloaf ham boudin frankfurter porchetta. Spare ribs bresaola bacon brisket chuck pork pastrami sausage hamburger. Tongue swine sirloin pork chop turkey jowl boudin alcatra short ribs shoulder. Jerky tongue t-bone biltong alcatra ham ham hock swine venison salami fatback. Salami corned beef hamburger pastrami leberkas strip steak swine pork beef kielbasa tongue ribeye doner landjaeger pancetta.</p>
+      <p class="flow-text col s6">Our mission is to raise awareness in others and motivate them to take action in the elimination of pollution BY making a difference and taking responsibility in protecting and restoring our ecosystem. </p>
       <div class="row">
         <div class="card">
           <div class="card-image">
