--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <body>
     <!-- Dropdown Structure -->
     <ul id="dropdown1" class="dropdown-content">
-      <li><a href="about.html/desc">Desciption?</a></li>
+      <li><a href="about.html">Desciption?</a></li>
       <li class="divider"></li>
-      <li><a href="about.html/other">Other?</a></li>
+      <li><a href="about.html">Other?</a></li>
     </ul>
     <nav class="green darken-4">
       <div class="nav-wrapper">
