--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.96.1/css/materialize.css">                                                  
     <link rel="stylesheet" href="css/style.css"> 
     <link href='https://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Slabo+27px|Source+Sans+Pro' rel='stylesheet' type='text/css'>
     <title>
       About
     </title>
