--- a/calendar.html
+++ b/calendar.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.96.1/css/materialize.css">
     <link rel="stylesheet" href="css/style.css">
     <link href='https://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Slabo+27px|Source+Sans+Pro' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <!-- Dropdown Structure -->                                                                                                                                   
