Made BY lower case in mission statement

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <h3 class="z-depth-0">This text will be styled and replaced</h3>
     </div>
     <div class="row">
-      <p class="flow-text col s6">Our mission is to raise awareness in others and motivate them to take action in the elimination of pollution BY making a difference and taking responsibility in protecting and restoring our ecosystem. </p>
+      <p class="flow-text col s6">Our mission is to raise awareness in others and motivate them to take action in the elimination of pollution by making a difference and taking responsibility in protecting and restoring our ecosystem. </p>
       <div class="row">
         <div class="card">
           <div class="card-image">
