--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
       <div class="row">
         <div class="card">
           <div class="card-image">
-            <!--<img class="image1 activator" src="photo_2_copy_720.png">-->
-            <img class="materialboxed" width="650" src="photo_2_copy_720.png">
+            <img class="materialboxed" width="650" src="Images/photo_2_copy_720.png">
           </div>
           </div>
         </div>
