--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="row">
         <div class="card">
           <div class="card-image">
-            <img class="materialboxed" width="650" src="http://placekitten.com/200/300">
+            <img class="materialboxed" width="650" src="http://placekitten.com.s3.amazonaws.com/homepage-samples/200/286.jpg">
           </div>
           </div>
         </div>
