--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="row">
         <div class="card">
           <div class="card-image">
-            <img class="materialboxed" width="650px" src="http://placekitten.com.s3.amazonaws.com/homepage-samples/96/139.jpg">
+            <img class="materialboxed" width="650px" src="placehold.it/200x200">
           </div>
           </div>
         </div>
