--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="row">
         <div class="card">
           <div class="card-image">
-            <img class="materialboxed" width="650px" src="http://placekitten.com/200/300">
+            <img class="materialboxed" width="650px" src="https://placekitten.com/200/300">
           </div>
           </div>
         </div>
