--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           </div>
         </div>
       </div>
-      <footer class="green darken-3 page-footer">
+      <!--<footer class="green darken-3 page-footer">
           <div class="container">
             <div class="row">
               <div class="col l6 s12">
@@ -66,7 +66,7 @@
             </div>
           </div>
         </footer>
-        </div>
+        </div>-->
       <script src="http://code.jquery.com/jquery-2.1.4.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.96.1/js/materialize.js"></script>
   </body>
