--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="row">
       <p class="flow-text col s6">Our mission is to raise awareness in others and motivate them to take action in the elimination of pollution by making a difference and taking responsibility in protecting and restoring our ecosystem. </p>
       <div class="donate row">
-        <div class="col s4">
+        <div>
           <div class="z-depth-2 card white">
             <div class="card-content">
               <span class="card-title black-text">Donate</span>
