--- a/index.html
+++ b/index.html
@@ -102,5 +102,6 @@
         </div>-->
       <script src="http://code.jquery.com/jquery-2.1.4.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.96.1/js/materialize.js"></script>
+      <script src="init.js"></script>
   </body>
 </html>
