--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <a href="index.html" class="brand-logo"><img src="https://placehold.it/65x65"></img></a>
         <ul class="right hide-on-med-and-down">
           <li><a href="calendar.html">Calendar</a></li>
+          <li><a href="about.html">About</a></li>
         </ul>
       </div>
     </nav>
