--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <div class="container">
             <div class="row">
               <div class="col l6 s12">
-                <h5 class="white-text">Footer Content</h5>
+                <h5 class="white-text"></h5>
                 <p class="grey-text text-lighten-4">Contact us at:</p>
                 <div class="white-text">slangely@summitps.org</div>
                 <div class="white-text">teameco.eph@gmail.com</div>
