--- a/calendar.html
+++ b/calendar.html
@@ -10,19 +10,12 @@
     <link href='https://fonts.googleapis.com/css?family=Slabo+27px|Source+Sans+Pro' rel='stylesheet' type='text/css'>
   </head>
   <body>
-    <!-- Dropdown Structure -->                                                                                                                                   
-    <ul id="dropdown1" class="dropdown-content">                                                                                                                  
-      <li><a href="#!">Desciption?</a></li>                                                                                                                       
-      <li class="divider"></li>                                                                                                                                   
-      <li><a href="#!">Other?</a></li>                                                                                                                            
-    </ul>                                                                                                                                                         
     <nav class="green darken-4">                                                                                                                                  
       <div class="nav-wrapper">                                                                                                                                   
         <a href="index.html" class="brand-logo"><img src="https://placehold.it/65x65"></img></a>
         <ul class="right hide-on-med-and-down">                                                                                                                   
-          <li><a href="index.html">Homepage</a></li>                                                                                                         
-          <!-- Dropdown Trigger -->                                                                                                                               
-          <li><a class="dropdown-button" href="#!" data-activates="dropdown1">About<i class="mdi-navigation-arrow-drop-down right"></i></a></li>                  
+          <li><a href="index.html">Homepage</a></li>
+          <li><a href="about.html">About</a></li>
         </ul>                                                                                                                                                     
       </div>                                                                                                                                                      
     </nav>
