--- a/calendar.html
+++ b/calendar.html
@@ -20,7 +20,6 @@
       </div>                                                                                                                                                      
     </nav>
     <div class="row">
-<iframe src="https://calendar.google.com/calendar/embed?src=teameco.founders%40gmail.com&ctz=America/Los_Angeles" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>    </div>
-    <script src="http://code.jquery.com/jquery-2.1.4.js"></script>
+      <iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23006600&amp;src=en.usa%23holiday%40group.v.calendar.google.com&amp;color=%23182C57&amp;src=teameco.founders%40gmail.com&amp;color=%23853104&amp;ctz=America%2FLos_Angeles" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>    <script src="http://code.jquery.com/jquery-2.1.4.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.96.1/js/materialize.js"></script>
   </body>
