--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
       </li>
     </ul>
   </div>
-    <h3 class="z-depth-0">This text will be styled and replaced</h3>
+    <h3 class="z-depth-0">Our misson</h3>
     </div>
     <div class="row">
-      <p class="flow-text col s6">Our mission is to raise awareness in others and motivate them to take action in the elimination of pollution by making a difference and taking responsibility in protecting and restoring our ecosystem. </p>
+      <p class="flow-text col s6">is to raise awareness in others and motivate them to take action in the elimination of pollution by making a difference and taking responsibility in protecting and restoring our ecosystem. </p>
       <div class="donate">
         <div>
           <div class="z-depth-2 card white">
